<resources>
    <string name="app_name">JavaBoost</string>


    <!--    Sign in-->
    <string name="sign_in_email">E-mail</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_forgot_password">Забыли пароль?</string>
    <string name="sign_in_enter">Войти</string>
    <string name="sign_in_registration">Зарегистрироваться</string>
    <string name="sign_in_input_empty">Поле пустое</string>
    <string name="sign_in_input_email_error">Неверный формат почты</string>
    <string name="sign_in_input_password_error">Пароль содержит меньше 8 символов</string>

    <!--    Sign forgot password-->
    <string name="forgot_password_title">Забыли свой пароль?</string>
    <string name="forgot_password_description">Вам придет письмо с инструкцией восстановления пароля</string>
    <string name="forgot_password_uncorrect_email">Некорректный email</string>
    <string name="forgot_password_email_sent_desc">Письмо с инструкцией было отправленно вам на почту</string>

    <!--    Sign up-->
    <string name="sign_up_title">Создать учетную запись</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_password">Пароль</string>
    <string name="sign_up_repeat_password">Повторите пароль</string>
    <string name="sign_up_create">Создать</string>
    <string name="sign_up_input_empty">Поле пустое</string>
    <string name="sign_up_input_email_error">Неверный формат почты</string>
    <string name="sign_up_input_password_error">Пароль содержит меньше 8 символов</string>
    <string name="sign_up_input_repeat_password_error">Пароли не совпадают</string>
    <string name="sign_up_user_register">Пользователь зарегистрирован</string>

    <!--    Email verified-->
    <string name="email_verified_title">Подтвердите почту</string>
    <string name="email_verified_desc">После нажатия "отправить" на почту %s будет отправлено письмо с подтверждением</string>
    <string name="email_verified_mail_sent">Письмо отправленно на почту %s</string>
    <string name="email_verified_another_email">Сменить почту</string>
    <string name="email_verified_continue">Продолжить</string>
    <string name="email_verified_not_verify">Почта не подтверждена</string>

    <!--    Nickname-->
    <string name="nickname_input_empty">Поле пустое</string>
    <string name="nickname_et_title">Никнейм</string>
    <string name="nickname_input_your_nickname">Введите ваш никнейм</string>
    <string name="nickname_input_many_symbols">Никнейм должен содержать до 16-ти символов</string>

    <!--    Profile-->
    <string name="profile_lessons">Уроки</string>
    <string name="profile_learned_lessons">Пройденные уроки</string>
    <string name="profile_settings">Настройки</string>
    <string name="profile_change_nickname">Сменить никнейм</string>
    <string name="profile_change_photo">Сменить фото</string>
    <string name="profile_quit">Выйти</string>
    <string name="profile_quit_title">Вы точно хотите выйти?</string>
    <string name="profile_quit_desc">Подтвердите выход из аккаунта</string>

    <!--    Lessons list-->
    <string name="lessons_list_empty">Тут пока пусто</string>
    <string name="lessons_list_description">Описание:\n%s</string>
    <string name="progress_percent">%s%</string>

    <!--    Lesson detail-->
    <string name="lesson_detail_set_rating">Оцените урок</string>
    <string name="lesson_detail_your_rating">Ваша оценка: %.1f</string>
    <string name="lesson_detail_middle_rating">Средняя оценка: %.1f</string>
    <string name="lesson_detail_thanks_for_rate">Спасибо за вашу оценку!</string>
    <string name="lesson_detail_comments">Комментарии</string>

    <!--    Comments-->
    <string name="comments_message">Сообщение</string>
    <string name="comments_empty">Еще никто не оставлял комментариев.\nБудьте первым!</string>

    <!--    Downloading-->
    <string name="succes">Успешно</string>
    <string name="loading_error">Ошибка загрузки</string>
    <string name="save_profile_error">Ошибка сохранения профиля</string>
    <string name="unknown_value">Unknown value</string>

    <!--    Compiler-->
    <string name="editor_log">compile output log</string>
    <string name="editor_import">Guide package</string>
    <string name="editor_comment">Note</string>
    <string name="input_values">Входные данные</string>
    <string name="output_values">Выходные данные</string>
    <string name="go_to_practice">Перейти к практике</string>
    <string name="task_error">Задание выполнено не до конца</string>
    <string name="console_output_error">Вывод не соответствует требованиям задания</string>
    <string name="code_error">Код не соответствует требованиям задания</string>

    <!--    Надписи действия/согласия/не согласия-->
    <string name="ok">OK</string>
    <string name="save">Сохранить</string>
    <string name="accept">Подтвердить</string>
    <string name="retry">Повторить</string>
    <string name="send">Отправить</string>
    <string name="cancel">Отменить</string>
    <string name="delete">Удалить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>