<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivResult"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            tools:src="@drawable/ic_succes"
            tools:tint="@color/green"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/tv14NormalMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="Вопрос" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInputValuesTitle"
        style="@style/tv16Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/input_values" />

    <TextView
        android:id="@+id/tvInputValues"
        style="@style/tv14NormalMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/code_frame"
        android:padding="10dp"
        tools:text="fdsfs" />

    <TextView
        android:id="@+id/tvOutputValuesTitle"
        style="@style/tv16Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/output_values" />

    <TextView
        android:id="@+id/tvOutputValues"
        style="@style/tv14NormalMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/code_frame"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        tools:text="fdsfs" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnPractice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_item_solo"
        android:backgroundTint="@color/bg_item_selector"
        android:minHeight="51dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black_light2" />

        <TextView
            android:id="@+id/left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/go_to_practice"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>